--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -41,3 +41,8 @@ websockets==15.0.1
 pre-commit==4.0.1
 black==24.10.0
 flake8==7.1.1
+pytest==8.3.3
+pytest-asyncio==0.24.0
+pytest-cov==6.0.0
+pytest-mock==3.14.0
+pytest-xdist==3.6.0
