--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,8 +91,19 @@ jobs:
         cache: 'pnpm'
         cache-dependency-path: ./frontend/pnpm-lock.yaml
     
+    - name: Cache Cypress binary
+      uses: actions/cache@v3
+      with:
+        path: ~/.cache/Cypress
+        key: cypress-${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+        restore-keys: |
+          cypress-${{ runner.os }}-
+    
     - name: Install dependencies
       run: pnpm install --frozen-lockfile
+    
+    - name: Install Cypress binary
+      run: pnpm exec cypress install
     
     - name: Type check
       run: pnpm run type-check
