--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,22 +1,31 @@
 annotated-types==0.7.0
 anyio==4.11.0
 certifi==2025.10.5
+cfgv==3.4.0
 click==8.3.0
+distlib==0.4.0
 dnspython==2.8.0
 email-validator==2.3.0
 exceptiongroup==1.3.0
 fastapi==0.118.2
 fastapi-cli==0.0.13
 fastapi-cloud-cli==0.3.0
+filelock==3.20.0
+gunicorn==23.0.0
 h11==0.16.0
 httpcore==1.0.9
 httptools==0.6.4
 httpx==0.28.1
+identify==2.6.15
 idna==3.10
 Jinja2==3.1.6
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 mdurl==0.1.2
+nodeenv==1.9.1
+packaging==25.0
+platformdirs==4.5.0
+pre_commit==4.3.0
 pydantic==2.12.0
 pydantic_core==2.41.1
 Pygments==2.19.2
@@ -36,13 +45,6 @@ typing_extensions==4.15.0
 urllib3==2.5.0
 uvicorn==0.37.0
 uvloop==0.21.0
+virtualenv==20.34.0
 watchfiles==1.1.0
 websockets==15.0.1
-pre-commit==4.0.1
-black==24.10.0
-flake8==7.1.1
-pytest==8.3.3
-pytest-asyncio==0.24.0
-pytest-cov==6.0.0
-pytest-mock==3.14.0
-pytest-xdist==3.6.0
