--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,6 +16,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Set lowercase repository owner
+        run: |
+          echo "REPO_OWNER_LOWER=${GITHUB_REPOSITORY_OWNER,,}" >> $GITHUB_ENV
+          echo "Original: $GITHUB_REPOSITORY_OWNER"
+          echo "Lowercase: ${GITHUB_REPOSITORY_OWNER,,}"
+
       - name: Log in to GHCR
         uses: docker/login-action@v3
         with:
@@ -25,14 +31,14 @@ jobs:
 
       - name: Build backend image
         run: |
-          docker build -t ghcr.io/${{ github.repository_owner }}/fpl-backend:latest -f backend/Dockerfile.prod .
+          docker build -t ghcr.io/${REPO_OWNER_LOWER}/fpl-backend:latest -f backend/Dockerfile.prod .
 
       - name: Push backend image
-        run: docker push ghcr.io/${{ github.repository_owner }}/fpl-backend:latest
+        run: docker push ghcr.io/${REPO_OWNER_LOWER}/fpl-backend:latest
 
       - name: Build frontend image
         run: |
-          docker build -t ghcr.io/${{ github.repository_owner }}/fpl-frontend:latest -f frontend/Dockerfile.prod .
+          docker build -t ghcr.io/${REPO_OWNER_LOWER}/fpl-frontend:latest -f frontend/Dockerfile.prod .
 
       - name: Push frontend image
-        run: docker push ghcr.io/${{ github.repository_owner }}/fpl-frontend:latest
+        run: docker push ghcr.io/${REPO_OWNER_LOWER}/fpl-frontend:latest
