--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -3,11 +3,11 @@ FROM node:20-alpine AS build
 
 WORKDIR /app
 
-COPY package*.json pnpm-lock.yaml* ./
+COPY frontend/package*.json frontend/pnpm-lock.yaml* ./
 RUN npm install -g pnpm
 RUN pnpm install --frozen-lockfile
 
-COPY . .
+COPY frontend/ .
 RUN pnpm run build
 
 # Serve stage
