--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -15,8 +15,4 @@ EXPOSE 8000
 # To use uvicorn only, set CMD_MODE=uvicorn in docker-compose or container env
 ENV CMD_MODE=gunicorn
 
-CMD if [ "$CMD_MODE" = "uvicorn" ]; then \
-      uvicorn main:app --host 0.0.0.0 --port 8000; \
-    else \
-      gunicorn -k uvicorn.workers.UvicornWorker main:app --workers 4 --bind 0.0.0.0:8000; \
-    fi
+CMD ["sh", "-c", "if [ \"$CMD_MODE\" = \"uvicorn\" ]; then uvicorn main:app --host 0.0.0.0 --port 8000; else gunicorn -k uvicorn.workers.UvicornWorker main:app --workers 4 --bind 0.0.0.0:8000; fi"]
