--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 20
 
       - name: Install pnpm
         uses: pnpm/action-setup@v3
@@ -58,7 +58,7 @@ jobs:
 
       - name: Build application
         working-directory: ./frontend
-        run: pnpm build
+        run: pnpm run build
 
       - name: Deploy to S3
         run: aws s3 sync ./frontend/dist s3://${{ env.S3_BUCKET }} --delete
