--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -28,6 +28,7 @@ platformdirs==4.5.0
 pre_commit==4.3.0
 pydantic==2.12.0
 pydantic_core==2.41.1
+pydantic-settings==2.7.1
 Pygments==2.19.2
 python-dotenv==1.1.1
 python-multipart==0.0.20
@@ -48,6 +49,12 @@ uvloop==0.21.0
 virtualenv==20.34.0
 watchfiles==1.1.0
 websockets==15.0.1
+
+# Database dependencies
+sqlalchemy==2.0.36
+psycopg2-binary==2.9.10
+alembic==1.14.0
+asyncpg==0.30.0
 
 # Development dependencies
 flake8==7.1.1
